--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 body{
-    font-family: "Ubuntu", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-style: normal;
+    margin: 0;
 }
 h1{
     font-size: 50px;
     padding-left: 5px;
+    margin: 0;
 }
 h2{
-    font-size: 50px;
+    font-size: 40px;
 }
 section{
     margin: 100px 20px;
@@ -18,7 +20,7 @@ p{
 }
 .flexible{
     display: flex;
-    padding: 20px 10%;
+    padding: 0 10%;
 }
 .half-width{
     width: 45%;
@@ -40,8 +42,9 @@ p{
 .half-width img{
     width: 80%;
 }
-.mission-header{
+.header-align{
     text-align: center;
+    margin: 20px;
 }
 #mission{
     background-color: rgb(212, 223, 115);
@@ -71,7 +74,37 @@ p{
 .projects-background{
     background-image: url(images/shapes/shape-1.png);
     background-repeat: no-repeat;
-    background-position-x: 95%;
+    background-position-x: 85%;
     background-position-y: 100%;
     background-size: 15%;
+    padding-bottom: 100px;
+}
+form{
+    border: 2px solid gray;
+    border-radius: 10px;
+    margin: 0 200px;
+    background-color: rgb(159, 235, 231);
+
+}
+.comment{
+    width: 400px;
+    height: 150px;
+}
+.submit-cancel{
+    text-align: center;
+    margin: 20px 0;
+}
+footer{
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+footer{
+    padding: 10px 0;
+}
+footer span{
+    font-family: "Cookie", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 60px;
 }
